--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,5 +1,6 @@
 eclipse.preferences.version=1
 encoding//src/main/webapp/amenities.jsp=UTF-8
 encoding//src/main/webapp/index.jsp=UTF-8
+encoding//src/main/webapp/rooms.jsp=UTF-8
 encoding//src/main/webapp/viewAllpage.jsp=UTF-8
 encoding/<project>=UTF-8
